--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "<% INTEGRATION %>",
+  "projectName": "columbus",
   "projectOwner": "vuestorefront",
   "repoType": "github",
   "repoHost": "https://github.com",
